[tool.poetry]
name = "certain"
version = "0.1.0"
authors = ["Hunt Zhan <huntzhan.dev@gmail.com>"]
license = "Not open source"
description = ""
readme = "README.md"
repository = "https://github.com/huntzhan/certain"
packages = [
    { include = "certain" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
fireball = "^0.5.0"
iolite = "^0.2.0"
pytest = "^6.1.2"
yapf = "^0.30.0"
flake8 = "^3.8.4"
pdoc3 = "^0.9.2"
twine = "^3.2.0"

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
